fix: fix some things and tested