@@ -4,10 +4,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
@@ -16,23 +14,28 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
 import io.eronalves1996.citypatrolback.model.City;
+import io.eronalves1996.citypatrolback.model.Hood;
 import io.eronalves1996.citypatrolback.repository.CityRepository;
 import io.eronalves1996.citypatrolback.repository.HoodRepository;
 
 @SpringBootTest
 class HoodControllerTest {
 
+	private static final String API_URL = "http://localhost:8080/city/";
 	private static ExecutorService executor = Executors.newSingleThreadExecutor();
 	private RestTemplate restTemplate = new RestTemplate();
 
 	@Autowired
 	private HoodRepository hoodRepository;
+
+	@Autowired
+	private CityRepository cityRepository;
 
 	@BeforeAll
 	public static void loadContainer() throws InterruptedException {
@@ -47,63 +50,66 @@ class HoodControllerTest {
 	}
 
 	@Test
-	public void testGetCities() {
+	public void testGetHoodsForCity() {
 		Iterable<City> cities = cityRepository.findAll();
-		ResponseEntity<City[]> response = restTemplate.getForEntity("http://localhost:8080/city", City[].class);
-		City[] citiesFetched = response.getBody();
-		List<City> citiesTested = new ArrayList<>();
-		cities.forEach(citiesTested::add);
-
-		assertNotNull(citiesFetched);
-		assertEquals(citiesTested.size(), List.of(citiesFetched).size());
+		City city = cities.iterator().next();
+		List<Hood> hoodiesTested = hoodRepository.findByCity(city);
+		ResponseEntity<Hood[]> response = restTemplate.getForEntity(API_URL + city.getId() + "/hood", Hood[].class);
+		List<Hood> hoodiesFetched = Arrays.asList(response.getBody());
+		assertNotNull(hoodiesFetched);
+		assertEquals(hoodiesTested.size(), hoodiesFetched.size());
 	}
 
 	@Test
-	public void testGetCityById() {
-		Optional<City> testedCity = cityRepository.findById(1);
-		if (testedCity.isPresent()) {
-			int id = testedCity.get().getId();
-			ResponseEntity<City> cityFetched = restTemplate.getForEntity("http://localhost:8080/city/" + id,
-					City.class);
-			assertEquals(testedCity.get(), cityFetched.getBody());
-		}
-	}
-
-	@Test
-	public void testGetCityByAnIdThatNotExists() {
-		HttpStatusCode statusCode = assertThrows(HttpClientErrorException.class,
-				() -> restTemplate.getForEntity("http://localhost:8080/city/" + 30, City.class)).getStatusCode();
-		assertEquals(HttpStatusCode.valueOf(404), statusCode);
-	}
-
-	@Test
-	public void testPostCity() {
-		City city = new City();
-		city.setName("Divinópolis");
-		city.setPopulationNumber(20000);
-		ResponseEntity<City> cityCreated = restTemplate.postForEntity("http://localhost:8080/city", city, City.class);
-		assertNotNull(cityCreated.getBody().getId());
-	}
-
-	@Test
-	public void testPutCity() {
-		City city = restTemplate.getForEntity("http://localhost:8080/city/1", City.class).getBody();
-		city.setName("Josafá");
-		city.setHoods(null);
-		restTemplate.put("http://localhost:8080/city", city);
-		City city2 = restTemplate.getForEntity("http://localhost:8080/city/1", City.class).getBody();
-		assertNotNull(city.getName(), city2.getName());
-	}
-
-	@Test
-	public void testDeleteCity() {
-		ResponseEntity<City[]> response = restTemplate.getForEntity("http://localhost:8080/city",
-				City[].class);
-		List<City> cities = Arrays.asList(response.getBody());
-		int lastId = cities.get(cities.size() - 1).getId();
-		restTemplate.delete("http://localhost:8080/city/" + lastId);
+	public void testGetHoodsForCityThatNotExists() {
+		Iterable<City> cities = cityRepository.findAll();
+		City city = cities.iterator().next();
 		assertThrows(HttpClientErrorException.class,
-				() -> restTemplate.getForEntity("http://localhost:8080/city/" + lastId, City.class));
+				() -> restTemplate.getForEntity(API_URL + city.getId() + 10 + "/hood", Hood[].class));
+
+	}
+
+	@Test
+	@Transactional
+	public void testGetCertainHoodInCity() {
+		Iterable<City> cities = cityRepository.findAll();
+		City city = cities.iterator().next();
+		List<Hood> hoods = city.getHoods();
+		ResponseEntity<Hood> response = restTemplate
+				.getForEntity(API_URL + city.getId() + "/hood/" + hoods.get(0).getId(), Hood.class);
+		Hood hood = response.getBody();
+		assertEquals(hoods.get(0), hood);
+	}
+
+	@Test
+	@Transactional
+	public void testGetCertainHoodInACityThatDoesntExists() {
+		Iterable<City> cities = cityRepository.findAll();
+		City city = cities.iterator().next();
+		List<Hood> hoods = city.getHoods();
+		assertThrows(HttpClientErrorException.class, () -> restTemplate
+				.getForEntity(API_URL + city.getId() + 100 + "/hood/" + hoods.get(0).getId(), Hood.class));
+	}
+
+	@Test
+	@Transactional
+	public void testGetCertainHoodThatNotExistsInACityThatExists() {
+		Iterable<City> cities = cityRepository.findAll();
+		City city = cities.iterator().next();
+		List<Hood> hoods = city.getHoods();
+		assertThrows(HttpClientErrorException.class, () -> restTemplate
+				.getForEntity(API_URL + city.getId() + "/hood/" + hoods.get(0).getId() + 100, Hood.class));
+	}
+
+	@Test
+	@Transactional
+	public void testGetCertainHoodExistsButNotOnCertainCity() {
+		Iterable<City> cities = cityRepository.findAll();
+		City city = cities.iterator().next();
+		City city2 = cities.iterator().next();
+		List<Hood> hoods = city.getHoods();
+		assertThrows(HttpClientErrorException.class, () -> restTemplate
+				.getForEntity(API_URL + city2.getId() + "/hood/" + hoods.get(0).getId() + 100, Hood.class));
 	}
 
 	@AfterAll
